stub functions done

--- a/MTRN3500 Assignment 2/MTRN3500 Assignment 2.vcxproj
+++ b/MTRN3500 Assignment 2/MTRN3500 Assignment 2.vcxproj
@@ -134,14 +134,23 @@
     <ClInclude Include="..\include\NetworkedModule.h" />
     <ClInclude Include="..\include\SMObjects.h" />
     <ClInclude Include="..\include\UGVModule.h" />
+    <ClInclude Include="Controller.h" />
+    <ClInclude Include="CrashAvoidance.h" />
     <ClInclude Include="Display.h" />
+    <ClInclude Include="GNSS.h" />
     <ClInclude Include="Laser.h" />
     <ClInclude Include="TMM.h" />
+    <ClInclude Include="VC.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Controller.cpp" />
+    <ClCompile Include="CrashAvoidance.cpp" />
     <ClCompile Include="Display.cpp" />
+    <ClCompile Include="GNSS.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Laser.cpp" />
     <ClCompile Include="TMM.cpp" />
+    <ClCompile Include="VC.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
